[package]
name = "hello-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
hyper = { version = "0.14.23", features = ["full"] }
sha2 = "0.10.6"
# tokio = { version = "1.23.0", features = ["full"] }
# tower = "0.4.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tower-http = { version = "0.3.4", features = ["cors", "fs", "trace"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"